[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/beep.wav" type="AudioStream" id=1]
[ext_resource path="res://src/MainScene.gd" type="Script" id=2]

[node name="MainScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
studyDuration = 5
drawDuration = 10

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -22.5
margin_right = 22.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 54.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Start"

[node name="CancelButton" type="Button" parent="VBoxContainer"]
margin_top = 229.0
margin_right = 54.0
margin_bottom = 249.0
size_flags_horizontal = 3
size_flags_vertical = 6
disabled = true
text = "Cancel"

[node name="TimeRemaining" type="Label" parent="VBoxContainer"]
margin_top = 394.0
margin_right = 54.0
margin_bottom = 408.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "0:00"
align = 1

[node name="Timer" type="Timer" parent="."]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
